--- a/TemplatedControlSample/ContentControlSample/ContentSamplePage.xaml
+++ b/TemplatedControlSample/ContentControlSample/ContentSamplePage.xaml
@@ -6,8 +6,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="10">
+        <StackPanel >
             <ContentControl>
                 <AdaptiveTrigger />
             </ContentControl>
