--- a/TemplatedControlSample/ContentControlSample/ContentTemplatePage.xaml
+++ b/TemplatedControlSample/ContentControlSample/ContentTemplatePage.xaml
@@ -6,7 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Padding="20">
         <Grid.Resources>
             <DataTemplate x:Key="PassTemplate">
                 <Border Background="Green">
