--- a/TemplatedControlSample/TemplatedControlSample/ItemsControlTest.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/ItemsControlTest.xaml
@@ -9,16 +9,21 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="CountElement"/>
-        <ItemsControl x:Name="ItemsControl" Grid.Row="1">
+        <TextBlock x:Name="CountElement" Margin="0,50,0,0"/>
+        <ItemsControl x:Name="ItemsControl" Grid.Row="1" Height="500">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding}" Loaded="OnItemLoaded"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsStackPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
         </ItemsControl>
     </Grid>
 </Page>
