--- a/TemplatedControlSample/TemplatedControlSample/MenuItemSamplePage.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/MenuItemSamplePage.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="TemplatedControlSample.MenuItemSamplePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:TemplatedControlSample.DateTimeSelectors.DateTimeSelectorForCommand"
+      xmlns:local="using:TemplatedControlSample"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
@@ -10,7 +10,7 @@
         <StackPanel>
             <TextBox x:Name="TextElement"/>
             <local:MenuItem Command="{Binding}" CommandParameter="{Binding ElementName=TextElement,Path=Text}" Height="100"
-                            Width="100"/>
+                            Width="100" Background="Blue"/>
         </StackPanel>
     </Grid>
 </Page>
