--- a/TemplatedControlSample/TemplatedControlSample/TabStopSamplePage.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/TabStopSamplePage.xaml
@@ -1,19 +1,21 @@
-﻿<Page
-    x:Class="TemplatedControlSample.TabStopSamplePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TemplatedControlSample"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="TemplatedControlSample.TabStopSamplePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:TemplatedControlSample"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+          Padding="20">
         <StackPanel>
-            <TextBox />
-            <ContentControl HorizontalContentAlignment="Stretch" IsTabStop="False">
-                <TextBox />
-            </ContentControl>
-            <local:DateTimeSelector />
+            <TextBox Width="300"
+                     HorizontalAlignment="Left" 
+                     />
+            <local:DateTimeSelector  HorizontalAlignment="Left" 
+                                     Margin="0,10"/>
+            <ComboBox  Width="300"
+                       HorizontalAlignment="Left" />
         </StackPanel>
     </Grid>
 </Page>
