--- a/TemplatedControlSample/TemplatedControlSample/GuiSamplePage.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/GuiSamplePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="TemplatedControlSample.EventListViewSamplePage"
+    x:Class="TemplatedControlSample.GuiSamplePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TemplatedControlSample"
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <local:EventListView x:Name="List" Margin="20"/>
+
     </Grid>
 </Page>
