--- a/TemplatedControlSample/TemplatedControlSample/ItemsControlTest.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/ItemsControlTest.xaml
@@ -1,29 +1,40 @@
-﻿<Page
-    x:Class="TemplatedControlSample.ItemsControlTest"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TemplatedControlSample"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="TemplatedControlSample.ItemsControlTest"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:TemplatedControlSample"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock x:Name="CountElement" Margin="0,50,0,0"/>
-        <ItemsControl x:Name="ItemsControl" Grid.Row="1" Height="500">
+        <TextBlock x:Name="CountElement"
+                   Margin="0,50,0,0" />
+        <ListView x:Name="ItemsControl"
+                  Grid.Row="1"
+                  Height="500">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding}" Loaded="OnItemLoaded"/>
+                    <TextBlock Text="{Binding}"
+                               Loaded="OnItemLoaded" />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
-            <ItemsControl.ItemsPanel>
+            <!--<ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsStackPanel />
                 </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
+            </ItemsControl.ItemsPanel>-->
+        </ListView>
+        <ItemsControl>
+            <ItemsControl.Items>
+                <local:ScoreModel Score="70" />
+                <local:ScoreModel Score="80" />
+                <local:ScoreModel Score="90" />
+                <local:ScoreModel Score="100" />
+            </ItemsControl.Items>
         </ItemsControl>
     </Grid>
 </Page>
