--- a/TemplatedControlSample/TemplatedControlSample/SimpleItemsControlSample.xaml
+++ b/TemplatedControlSample/TemplatedControlSample/SimpleItemsControlSample.xaml
@@ -7,16 +7,16 @@
       mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel>
+        <StackPanel Margin="20" HorizontalAlignment="Center">
             <local:SimpleItemsControl>
                <ContentPresenter Content="this is ContentPresenter" />
                  <Rectangle  Height="50"
-                            Width="200"
+                            HorizontalAlignment="Stretch"
                             Fill="Red" />
                 <local:ScoreModel />
             </local:SimpleItemsControl>
             
-            <local:SimpleItemsControl>
+            <local:SimpleItemsControl Margin="0,20,0,0">
                 <local:SimpleItemsControl.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Score}" />
